# login-system

./: README.md
GUI/: README.md
GUI/QT/: CMakeLists.txt  changepasswordwindow.cpp  changepasswordwindow.h  changepasswordwindow.ui  functions.cpp  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerwindow.cpp  registerwindow.h  registerwindow.ui  sources.qrc
console code/: README.md
console code/project/: change_password.cpp  database.txt  login.cpp  main.cpp  main_functions.cpp  register.cpp
login system/: 1-2- User information.txt  3- validate email.txt  4- validate phone-number.txt  5- validate user name.txt  6-8- validate password.txt  Menu.txt  Restrictions.txt  main.cpp  main_menu.cpp  mapping.ai  program flow.txt  user passwords.txt  user_information.cpp  users information.txt  validation.cpp
login system/code/: CMakeLists.txt  all emails.txt  change_password.cpp  login.cpp  main_menu.cpp  register.cpp  user passwords.txt  user_information.cpp  users information.txt  validation.cpp
